--- a/testcase/基于python实现的http+json协议接口自动化测试框架/report20151118202134.html
+++ b/testcase/基于python实现的http+json协议接口自动化测试框架/report20151118202134.html
@@ -1,18 +1,19 @@
+encoding = 'utf-8'
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><title>test_report_page</title>
 </head>
 <body><h1 align="center">test report</h1>
-<p>²âÊÔ×ÜºÄÊ±£º0:00:00.072004</p>
-<p>²âÊÔÓÃÀıÊı£º1&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp³É¹¦ÓÃÀıÊı£º1&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspÊ§°ÜÓÃÀıÊı£º0&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp³ö´íÓÃÀıÊı£º0</p>
-<table class="table" cellspacing="0" border="1" cellpadding="1"><tr><td align="center" bgcolor="#ABABAB">ÓÃÀıID</td>
-<td align="center" bgcolor="#ABABAB">HTTP·½·¨</td>
-<td align="center" bgcolor="#ABABAB">½Ó¿ÚÃû³Æ</td>
-<td align="center" bgcolor="#ABABAB">ÇëÇóURL</td>
-<td align="center" bgcolor="#ABABAB">ÇëÇó²ÎÊı/Êı¾İ</td>
-<td align="center" bgcolor="#ABABAB">²âÊÔ·½·¨</td>
-<td align="center" bgcolor="#ABABAB">²âÊÔÃèÊö</td>
-<td align="center" bgcolor="#ABABAB">²âÊÔ½á¹û</td>
-<td align="center" bgcolor="#ABABAB">Ê§°ÜÔ­Òò</td>
+<p>ï¿½ï¿½ï¿½ï¿½ï¿½Üºï¿½Ê±ï¿½ï¿½0:00:00.072004</p>
+<p>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½1&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspï¿½É¹ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½1&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspÊ§ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½0&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½0</p>
+<table class="table" cellspacing="0" border="1" cellpadding="1"><tr><td align="center" bgcolor="#ABABAB">ï¿½ï¿½ï¿½ï¿½ID</td>
+<td align="center" bgcolor="#ABABAB">HTTPï¿½ï¿½ï¿½ï¿½</td>
+<td align="center" bgcolor="#ABABAB">ï¿½Ó¿ï¿½ï¿½ï¿½ï¿½ï¿½</td>
+<td align="center" bgcolor="#ABABAB">ï¿½ï¿½ï¿½ï¿½URL</td>
+<td align="center" bgcolor="#ABABAB">ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½/ï¿½ï¿½ï¿½ï¿½</td>
+<td align="center" bgcolor="#ABABAB">ï¿½ï¿½ï¿½Ô·ï¿½ï¿½ï¿½</td>
+<td align="center" bgcolor="#ABABAB">ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½</td>
+<td align="center" bgcolor="#ABABAB">ï¿½ï¿½ï¿½Ô½ï¿½ï¿½</td>
+<td align="center" bgcolor="#ABABAB">Ê§ï¿½ï¿½Ô­ï¿½ï¿½</td>
 
 </tr>
 <tr><td align="center">2</td>
@@ -21,7 +22,7 @@
 <td align="center">/appServer/interface/user/modifyPayPwd</td>
 <td>{'confNewPayPwd': 'e10adc3949ba59abbe56e057f20f883e', 'payPassword': 'e10adc3949ba59abbe56e057f20f883e', 'newPayPwd': 'e10adc3949ba59abbe56e057f20f883e', 'userId': 2910057590}</td>
 <td>test_chpasswd_normal</td>
-<td>²âÊÔ¸ü¸ÄÃÜÂë£¬ÕıÏò</td>
+<td>ï¿½ï¿½ï¿½Ô¸ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ë£¬ï¿½ï¿½ï¿½ï¿½</td>
 <td align="center">Pass</td>
 <td></td>
 
